
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (libgnode)

SET(CMAKE_VERBOSE_MAKEFILE ON)

FIND_PACKAGE(Doxygen)
if(DOXYGEN_FOUND)
	ADD_CUSTOM_TARGET(doc
			${DOXYGEN_EXECUTABLE} doc.src/doxy.conf
			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
			COMMENT "Generating API documentation with Doxygen" VERBATIM
			)
ENDIF(DOXYGEN_FOUND)

FIND_PACKAGE(Boost 1.62 REQUIRED COMPONENTS system date_time filesystem iostreams)
IF(Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF(Boost_FOUND)

SET(LIBS ${Boost_LIBRARIES} pthread)

ADD_DEFINITIONS(-DLIBGNODE_CFG_BUILD_MODE="${CMAKE_BUILD_TYPE}")
ADD_DEFINITIONS(-fsigned-char -Wall -DLIBGNODE_CFG_OS="${CMAKE_SYSTEM_NAME}" -DLIBGNODE_CFG_CPU="${CMAKE_SYSTEM_PROCESSOR}")

enable_testing ()

ADD_SUBDIRECTORY(test)

